<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity"
    android:orientation="vertical"
    android:gravity="center">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/upload_file_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/upload_file"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:padding="10dp"
        android:textSize="20sp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/check_imei_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/check_imei"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:padding="10dp"
        android:textSize="20sp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"/>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/see_imei_found_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_found_text"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:padding="10dp"
        android:textSize="20sp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/see_imei_not_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_not_found_text"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:padding="10dp"
        android:textSize="20sp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"/>

</LinearLayout>