<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.CheckIMEIActivity"
    android:orientation="vertical">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/start_checking_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_checking_imei"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:padding="10dp"
        android:textSize="16sp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/stop_checking_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stop_checking_imei"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:padding="10dp"
        android:textSize="16sp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:visibility="gone"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="20dp">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/total_imei"
            android:layout_weight="2"
            android:textColor="@color/primaryDarkColor"
            android:textStyle="bold"
            android:textSize="16sp"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/total_imei_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/primaryDarkColor"
            android:textStyle="bold"
            android:textSize="16sp"/>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/checked"
            android:layout_weight="2"
            android:textColor="@color/secondaryDarkColor"
            android:textStyle="bold"
            android:textSize="16sp"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/checked_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/secondaryDarkColor"
            android:textStyle="bold"
            android:textSize="16sp"/>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:indeterminate="true"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:visibility="gone"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/check_rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"/>

</LinearLayout>